examples/test/testpolicy16749.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16749
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key46: value4
      key33: value21
      key18: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value38
          key34: value39
      podSelector:
        matchLabels:
          key4: value44
